[package]
name = "bp3d-make"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["lua51", "vendored"] }
clap = { version = "4.5.4", features = ["derive"] }
current_platform = "0.2.0"
