[package]
name = "bp3d-package"
description = "BP3D Package is a tool used to package libraries and applications in OS native formats."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.20.2"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde = { version = "1.0.199", features = ["derive"] }
current_platform = "0.2.0"
copy_dir = "0.1.3"
